--- a/franklyn-frontend/src/app/components/new-test/new-test.component.css
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.css
@@ -41,3 +41,21 @@
     background-color: rgb(245, 244, 244) !important;
     height: 100%;
 }
+
+.col-9{
+    width: 100%;
+    height: 100%;
+}
+.large{
+    height: 100%;
+    background-color: rgb(245, 244, 244) !important;
+    padding: 0px;
+}
+
+.card-title{
+    font-size: 25px;
+}
+
+.form-label{
+    font-size: 17px;
+}
