--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,56 +1,59 @@
 <app-sidebar></app-sidebar>
 <div class="row large">
     <div class="col-9">
-        <div class="body">
-            <app-navbar [header]="'Dashboard'"></app-navbar>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">Titel</h3>
-                            <h1 class="text">{{exam.title}}</h1>
-                            <div class="card-footer"></div>
+        <div class="content">
+            <h1>Dashboard</h1>
+            <!-- <app-navbar [header]="'Dashboard'"></app-navbar> -->
+            <div class="body">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">Titel</h3>
+                                <h1 class="text">{{exam.title}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">Klassen</h3>
+                                <h1 class="text">{{exam.formIds}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">Klassen</h3>
-                            <h1 class="text">{{exam.formIds}}</h1>
-                            <div class="card-footer"></div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">PIN</h3>
+                                <h1 class="text">{{exam.pin}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">Eingeschriebene Schüler</h3>
+                                <h1 class="text">{{exam.nrOfStudents}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">PIN</h3>
-                            <h1 class="text">{{exam.pin}}</h1>
-                            <div class="card-footer"></div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">Datum</h3>
+                                <h1 class="text">{{exam.date | date: 'dd.MM.yyyy'}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card inner">
+                                <h3 class="subheader">Zeit</h3>
+                                <h1 class="text">{{exam.startTime | date: 'HH:MM'}}</h1>
+                                <div class="card-footer"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">Eingeschriebene Schüler</h3>
-                            <h1 class="text">{{exam.nrOfStudents}}</h1>
-                            <div class="card-footer"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">Datum</h3>
-                            <h1 class="text">{{exam.date | date: 'dd.MM.yyyy'}}</h1>
-                            <div class="card-footer"></div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card inner">
-                            <h3 class="subheader">Zeit</h3>
-                            <h1 class="text">{{exam.startTime | date: 'HH:MM'}}</h1>
-                            <div class="card-footer"></div>
-                        </div>
-                    </div>
-                </div>
+            </div>
         </div>
         
     </div>
