--- a/franklyn-frontend/src/app/components/sidebar/sidebar.component.css
+++ b/franklyn-frontend/src/app/components/sidebar/sidebar.component.css
@@ -40,6 +40,7 @@
     color: white;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 18px;
 }
 
 .sidebar-btn{
@@ -47,6 +48,7 @@
     margin-top: 500px;
     margin-bottom: 20px;
     background-color: #02c39a;
+    font-size: 18px;
 }
 
 .sidebar-btn:hover{
