--- a/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
+++ b/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
@@ -1,1 +1,46 @@
-<p>edit-test works!</p>
+<app-sidebar></app-sidebar>
+
+<div class="row large">
+    <div class="col-9">
+        <div class="content">
+            <h1>Test verwalten </h1>
+            <div class="container-fluid">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Test bearbeiten</h5>
+                        <br>
+                        <label class="form-label">Titel</label>
+                        <input [(ngModel)]="newExam.title" class="form-control" type="text" placeholder="Titel">
+                        <br>
+                        <label class="form-label">Klassen</label>
+                        <br>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Auswahl</mat-label>
+                            <mat-select [(ngModel)]="selectedForms" multiple>
+                              <mat-option *ngFor="let form of forms" [value]="form.id">{{form.title}}</mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                        <br>
+                        <label class="form-label">Begleitlehrer</label>
+                        <br>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Auswahl</mat-label>
+                            <mat-select [(ngModel)]="selectedExaminers" multiple>
+                              <mat-option *ngFor="let examiner of examiners" [value]="examiner.id">{{examiner.firstName}} {{examiner.lastName}}</mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                        <br>
+                        <label class="form-label">Datum</label>
+                        <input [(ngModel)]="tempDate" class="form-control" type="date">
+                        <br>
+                        <label class="form-label">Startzeit</label>
+                        <input [(ngModel)]="tempStartTime" class="form-control" type="time">
+                        <br>
+                        <label class="form-label">Endzeit</label>
+                        <input [(ngModel)]="tempEndTime" class="form-control" type="time">
+                      </div>
+                      <button (click)="save()" class="btn btn-forward lonebtn">Speichern</button>
+                </div>
+            </div>
+    </div>
+</div>
