--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
@@ -3,7 +3,13 @@
 <div class="row large">
     <div class="col-9">
         <div class="content">
-            <h1>Meine Test</h1>
+            <div class="head">
+                <div class="nav-header">
+                    <h1 class="header-nav">Meine Tests</h1>
+                    <div class="logout">
+                    </div>
+                </div>
+            </div>
             <div class="container-fluid" *ngIf="hasAlreadyExams == true">
                 <div class="card">
                     <h1 class="header" >Alle Tests</h1>
