--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -3,7 +3,13 @@
 <div class="row large">
     <div class="col-9">
         <div class="content">
-            <h1>Screenshots</h1>
+            <div class="head">
+                <div class="nav-header">
+                    <h1 class="header-nav">Screenshots</h1>
+                    <div class="logout">
+                    </div>
+                </div>
+            </div>
             <div class="container-fluid">
                 <div class="card">
                     <h1 class="header" >{{exam.date | date: 'yyyy'}} - {{exam.formIds}} - {{exam.title}}</h1>
