--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
@@ -22,11 +22,17 @@
     clear: none !important;
   }
 .body{
-  padding-top: 20px;
   background-color: rgb(245, 244, 244) !important;
   height: 100%;
   width: 100%;
   border: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 20px;
+
+}
+.card{
+  height: 200px !important;
 }
 .header{
   padding-left: 20px;
@@ -47,17 +53,32 @@
 .subheader{
   margin-right: 20px;
   text-align: right;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .card-footer{
   background-color: white;
+  margin-top: 5px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
+.nav-header{
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  border-bottom: 1px solid rgb(0 0 0 / 18%);
+  font-weight: 400;
+  margin: 5px 0;
+  padding: 15px;
+  font-size: 20px;
+  color: #777;
+}
 
 .col-9{
   width: 100%;
   height: 100%;
+  padding: 0px;
 }
 .large{
   height: 100%;
@@ -81,4 +102,7 @@
   height: 100%;
 }
 
+.col-6{
+  padding: 0px;
+}
   
