--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,13 @@
 <div class="row large">
     <div class="col-9">
         <div class="content">
-            <h1>Dashboard</h1>
-            <!-- <app-navbar [header]="'Dashboard'"></app-navbar> -->
+            <div class="head">
+                <div class="nav-header">
+                    <h1 class="header-nav">Dashboard</h1>
+                    <div class="logout">
+                    </div>
+                </div>
+            </div>
             <div class="body">
                     <div class="row">
                         <div class="col-6">
