--- a/franklyn-frontend/src/app/components/edit-test/edit-test.component.css
+++ b/franklyn-frontend/src/app/components/edit-test/edit-test.component.css
@@ -38,11 +38,14 @@
 .container-fluid{
     background-color: rgb(245, 244, 244) !important;
     height: 100%;
+    padding: 30px;
+
 }
 
 .col-9{
     width: 100%;
     height: 100%;
+    padding: 0px;
 }
 .large{
     height: 100%;
@@ -65,3 +68,15 @@ mat-form-field{
 .card{
     width: 100%;
 }
+
+.nav-header{
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-bottom: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    margin: 5px 0;
+    padding: 15px;
+    font-size: 20px;
+    color: #777;
+  }
