--- a/franklyn-frontend/src/app/components/howto/howto.component.css
+++ b/franklyn-frontend/src/app/components/howto/howto.component.css
@@ -1,11 +1,11 @@
 .container-fluid{
-    padding-top: 20px;
-    padding-right: 20px;
+    padding: 30px;
 }
 
 .col-9{
     width: 100%;
     height: 100%;
+    padding: 0px;
   }
   .large{
     height: 100%;
@@ -15,4 +15,16 @@
 
 .bullet-list{
     font-size: 18px;
+}
+
+.nav-header{
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  border-bottom: 1px solid rgb(0 0 0 / 18%);
+  font-weight: 400;
+  margin: 5px 0;
+  padding: 15px;
+  font-size: 20px;
+  color: #777;
 }
