--- a/franklyn-frontend/src/app/components/howto/howto.component.html
+++ b/franklyn-frontend/src/app/components/howto/howto.component.html
@@ -3,7 +3,13 @@
 <div class="row large">
     <div class="col-9">
         <div class="content">
-            <h1>Anleitung</h1>
+            <div class="head">
+                <div class="nav-header">
+                    <h1 class="header-nav">Anleitung</h1>
+                    <div class="logout">
+                    </div>
+                </div>
+            </div>
             <div class="container-fluid">
                 <div class="card">
                     <div class="card-body">
