--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
@@ -15,8 +15,7 @@ table tr.even_col {
 }
 
 .container-fluid{
-    padding-top: 30px;
-    padding-left: 20px;
+    padding: 30px;
     background-color: rgb(245, 244, 244) !important;
     height: 100%;
 }
@@ -33,12 +32,13 @@ table tr.even_col {
 }
 
 .table tr.active td {
-    background-color: rgb(145, 144, 144);
+    background-color: rgb(241, 241, 241);
 }
 
 .col-9{
     width: 100%;
     height: 100%;
+    padding: 0px;
 }
 .large{
     height: 100%;
@@ -67,4 +67,16 @@ tr {
 
 .space{
     height: 5px;
+}
+
+.nav-header{
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-bottom: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    margin: 5px 0;
+    padding: 15px;
+    font-size: 20px;
+    color: #777;
 }
