--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -6,8 +6,7 @@ table tr.even_col {
 }
 
 .container-fluid{
-    padding-top: 40px;
-    padding-right: 20px;
+    padding: 30px;
     margin-right: 30px;
     background-color: rgb(245, 244, 244) !important;
     height: 100%;
@@ -78,6 +77,7 @@ table tr.even_col {
 .col-9{
     width: 100%;
     height: 100%;
+    padding: 0px;
 }
 .large{
     height: 100%;
@@ -95,4 +95,16 @@ table tr.even_col {
 
 .txt{
     font-size: 18px;
+}
+
+.nav-header{
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-bottom: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    margin: 5px 0;
+    padding: 15px;
+    font-size: 20px;
+    color: #777;
 }
