--- a/franklyn-frontend/src/app/components/new-test/new-test.component.html
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         
-            <div class="container-fluid" *ngIf="showSecondCard == true">
+<!--             <div class="container-fluid" *ngIf="showSecondCard == true">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Start- und Endzeit festlegen</h5>
@@ -57,7 +57,7 @@
                         <button (click)="secondCardSubmit()" class="btn btn-forward inline">Weiter</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         
             <div class="container-fluid" *ngIf="showThirdCard == true">
                 <div class="card">
