--- a/franklyn-frontend/src/app/components/howto/howto.component.html
+++ b/franklyn-frontend/src/app/components/howto/howto.component.html
@@ -26,7 +26,7 @@
                                 <p>Schüler/Studenten:</p>
                                 <li>Den Client auf der Website downloaden (Auf richtiges Betriebssytem achten!)</li>
                                 <li>Download öffnen</li>
-                                <li>Namen und PIN eingeben</li>
+                                <li>PIN und Namen eingeben</li>
                             </ul>
                         </div>
                     </div>
