fra-90 added footer

--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
@@ -107,6 +107,31 @@
 
 .content{
   padding: 0px;
-  margin: 0px;
+}
+
+.footer{
+  position: absolute;
+  bottom: 0px;
+  z-index: 2000;
+  width: 83%;
+  height: 80px;
+  background-color: white;
+  border-top: 1px solid rgb(0 0 0 / 18%);
+  font-weight: 400;
+  padding: 22px;
+  font-size: 25px;
+  text-align: right;
+  color: #777;
+}
+
+.header-nav{
+  float: left;
+  display: inline-block;
+}
+
+.logout{
+  float: right;
+  display: inline-block;
+
 }
   
