--- a/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
+++ b/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
@@ -48,5 +48,8 @@
                       <button (click)="save()" class="btn btn-forward lonebtn">Speichern</button>
                 </div>
             </div>
+            <div class="footer">
+              <h1 class="header-nav">2022 Franklyn</h1>
+          </div>
     </div>
 </div>
