--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
@@ -84,3 +84,18 @@ table tr.highlight {
 	background: rgb(170, 169, 169);
 
 }
+
+.footer{
+    position: absolute;
+    bottom: 0px;
+    z-index: 2000;
+    width: 83%;
+    height: 80px;
+    background-color: white;
+    border-top: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+    text-align: right;
+    color: #777;
+  }
