--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
@@ -114,8 +114,9 @@
             </div>
             
         </div>
-
+        <div class="footer">
+            <h1 class="header-nav">2022 Franklyn</h1>
+        </div>
     </div>
-
 </div>
 
