--- a/franklyn-frontend/src/app/components/new-test/new-test.component.css
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.css
@@ -82,3 +82,18 @@ label{
     font-size: 25px;
     color: #777;
 }
+
+.footer{
+    position: absolute;
+    bottom: 0px;
+    z-index: 2000;
+    width: 83%;
+    height: 80px;
+    background-color: white;
+    border-top: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+    text-align: right;
+    color: #777;
+  }
