--- a/franklyn-frontend/src/app/components/new-test/new-test.component.html
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.html
@@ -86,7 +86,9 @@
                 </div>
             </div>
         </div>
-        
+        <div class="footer">
+            <h1 class="header-nav">2022 Franklyn</h1>
+        </div>
     </div>
 </div>
 
