--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -114,3 +114,18 @@ table tr.even_col {
     border-radius: 5px;
     border:rgb(3, 124, 176);
 }
+
+.footer{
+    position: absolute;
+    bottom: 0px;
+    z-index: 2000;
+    width: 83%;
+    height: 80px;
+    background-color: white;
+    border-top: 1px solid rgb(0 0 0 / 18%);
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+    text-align: right;
+    color: #777;
+  }
