--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -64,5 +64,8 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <h1 class="header-nav">2022 Franklyn</h1>
+        </div>
     </div>
 </div>
