--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
@@ -17,6 +17,7 @@
                 <div class="nav-header">
                     <h1 class="header-nav">Meine Tests</h1>
                     <div class="logout">
+                        <button class="btn btn-danger" (click)="logout()">Abmelden</button>
                     </div>
                 </div>
             </div>
@@ -115,7 +116,7 @@
             
         </div>
         <div class="footer">
-            <h1 class="header-nav">2022 Franklyn</h1>
+            <h1>2022 Franklyn</h1>
         </div>
     </div>
 </div>
