--- a/franklyn-frontend/src/app/components/new-test/new-test.component.css
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.css
@@ -77,9 +77,6 @@ label{
     height: 80px;
     background-color: white;
     border-bottom: 1px solid rgb(0 0 0 / 18%);
-    font-weight: 400;
-    padding: 22px;
-    font-size: 25px;
     color: #777;
 }
 
@@ -96,4 +93,19 @@ label{
     font-size: 25px;
     text-align: right;
     color: #777;
+  }
+
+
+  .header-nav{
+    float: left;
+    display: inline-block;
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+  }
+  
+  .logout{
+    float: right;
+    display: inline-block;
+    padding: 20px;
   }
