--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -103,9 +103,6 @@ table tr.even_col {
     height: 80px;
     background-color: white;
     border-bottom: 1px solid rgb(0 0 0 / 18%);
-    font-weight: 400;
-    padding: 22px;
-    font-size: 25px;
     color: #777;
 }
 
@@ -128,4 +125,18 @@ table tr.even_col {
     font-size: 25px;
     text-align: right;
     color: #777;
+  }
+
+  .header-nav{
+    float: left;
+    display: inline-block;
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+  }
+  
+  .logout{
+    float: right;
+    display: inline-block;
+    padding: 20px;
   }
