--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
                 <div class="nav-header">
                     <h1 class="header-nav">Dashboard</h1>
                     <div class="logout">
-                        <button class="btn btn-primary" (click)="logout()">Abmelden</button>
+                        <button class="btn btn-danger" (click)="logout()">Abmelden</button>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="footer">
-            <h1 class="header-nav">2022 Franklyn</h1>
+            <h1>2022 Franklyn</h1>
         </div>
     </div>
 </div>
