--- a/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
+++ b/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
@@ -7,7 +7,8 @@
             <div class="nav-header">
                 <h1 class="header-nav">Test verwalten</h1>
                 <div class="logout">
-                </div>
+                  <button class="btn btn-danger" (click)="logout()">Abmelden</button>
+              </div>
             </div>
         </div>
             <div class="container-fluid">
@@ -49,7 +50,7 @@
                 </div>
             </div>
             <div class="footer">
-              <h1 class="header-nav">2022 Franklyn</h1>
+              <h1>2022 Franklyn</h1>
           </div>
     </div>
 </div>
