--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
@@ -74,9 +74,6 @@ tr {
     height: 80px;
     background-color: white;
     border-bottom: 1px solid rgb(0 0 0 / 18%);
-    font-weight: 400;
-    padding: 22px;
-    font-size: 25px;
     color: #777;
 }
 
@@ -98,4 +95,18 @@ table tr.highlight {
     font-size: 25px;
     text-align: right;
     color: #777;
+  }
+
+  .header-nav{
+    float: left;
+    display: inline-block;
+    font-weight: 400;
+    padding: 22px;
+    font-size: 25px;
+  }
+  
+  .logout{
+    float: right;
+    display: inline-block;
+    padding: 20px;
   }
