--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -7,6 +7,7 @@
                 <div class="nav-header">
                     <h1 class="header-nav">Screenshots</h1>
                     <div class="logout">
+                        <button class="btn btn-danger" (click)="logout()">Abmelden</button>
                     </div>
                 </div>
             </div>
@@ -65,7 +66,7 @@
             </div>
         </div>
         <div class="footer">
-            <h1 class="header-nav">2022 Franklyn</h1>
+            <h1>2022 Franklyn</h1>
         </div>
     </div>
 </div>
