--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -26,23 +26,23 @@
                      style="border-radius: 50%; display: inline-block; background: red; padding: 20px;"></div>
             </div>
         </div> -->
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Franklyn</a>
+        <a class="navbar-brand js-scroll-trigger" (click)="goToTop()">Franklyn</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse nav" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="goToAbout()">About</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#download">Download</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"(click)="goToDownload()">Download</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#login">Login</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="goToLogin()">Login</a>
                 </li>
             </ul>
         </div>
