fra-76 get new screenshot every 5 seconds

--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -39,6 +39,9 @@
                                       </div>
                                  </div>
                             </div>
+                            <div class="col-8" *ngIf="">
+                                
+                            </div>
                             <div class="col-1">
                                 <div class="students txt">
                                     <label>Schüleranzahl:</label>
