fra-74 added polling for test

--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-1">
                                 <div class="students txt">
-                                    <label>Schüleranzahl:</label>
+                                    <label>Schüleranzahl:  {{exam.nrOfStudents}}</label>
                                     <br>
                                     <br>
                                     <div class="patroullie">
