--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -64,6 +64,7 @@ table tr.even_col {
   
 .normal {
     background-color:rgb(166, 223, 242);
+    border-radius: 5px;
 }
 
 .names{
@@ -144,7 +145,7 @@ table tr.even_col {
   .examinee-viewport {
     height: 400px;
     width: 100%;
-    border: 3px solid rgb(196, 194, 194);
+    /* border: 3px solid rgb(196, 194, 194); */
     border-radius: 5px;
   }
   
@@ -152,5 +153,6 @@ table tr.even_col {
     text-align: left;
     height: 50px;
     padding:15px;
-    border-bottom: 1px solid rgb(196, 194, 194);
+    margin-bottom: 5px;
+    /* border-bottom: 1px solid rgb(196, 194, 194); */
   }
