--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -20,9 +20,9 @@
                                 <span *ngIf="!(f && l) && !l"> ,</span>
                         </span>
                         </h1>
-                    <div class="screenshot">
+                    <div>
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-8" *ngIf="this.hasScreenshots == true">
                                 <div class="slideshow">
                                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
@@ -39,8 +39,8 @@
                                       </div>
                                  </div>
                             </div>
-                            <div class="col-8" *ngIf="">
-                                
+                            <div *ngIf="this.hasScreenshots == false" class="col-8 slideshow">
+                                <h2>Keine Screenshots verfügbar!</h2>
                             </div>
                             <div class="col-1">
                                 <div class="students txt">
@@ -60,7 +60,7 @@
                                         <cdk-virtual-scroll-viewport class="examinee-viewport" itemSize="60">
                                             <dl class="examinee-dl">
                                               <ng-container *cdkVirtualFor="let examinee of examinees">
-                                                <dt class="examinee-dt" [ngClass]="{'highlight' : examinee.id == selectedExamineeId}" (click)="SelectExaminee(examinee.id)">{{examinee.firstName}} {{examinee.lastName}}</dt>
+                                                <dt class="examinee-dt normal" [ngClass]="{'highlight' : examinee.id == selectedExamineeId}" (click)="SelectExaminee(examinee.id)">{{examinee.firstName}} {{examinee.lastName}}</dt>
                                               </ng-container>
                                             </dl>
                                           </cdk-virtual-scroll-viewport>
