--- a/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
+++ b/franklyn-frontend/src/app/components/edit-test/edit-test.component.html
@@ -17,7 +17,7 @@
                         <h5 class="card-title">Test bearbeiten</h5>
                         <br>
                         <label class="form-label">Titel</label>
-                        <input [(ngModel)]="newExam.title" class="form-control" type="text" placeholder="Titel">
+                        <input [(ngModel)]="exam.title" class="form-control" type="text" placeholder="Titel">
                         <br>
                         <label class="form-label">Klassen</label>
                         <br>
@@ -32,19 +32,13 @@
                         <br>
                         <mat-form-field appearance="fill">
                             <mat-label>Auswahl</mat-label>
-                            <mat-select [(ngModel)]="selectedExaminers" multiple>
+                            <mat-select [(ngModel)]="selectedExaminers" [(value)]="tempExaminers" multiple>
                               <mat-option *ngFor="let examiner of examiners" [value]="examiner.id">{{examiner.firstName}} {{examiner.lastName}}</mat-option>
                             </mat-select>
                           </mat-form-field>
                         <br>
                         <label class="form-label">Datum</label>
-                        <input [(ngModel)]="tempDate" class="form-control" type="date">
-                        <br>
-                        <label class="form-label">Startzeit</label>
-                        <input [(ngModel)]="tempStartTime" class="form-control" type="time">
-                        <br>
-                        <label class="form-label">Endzeit</label>
-                        <input [(ngModel)]="tempEndTime" class="form-control" type="time">
+                        <input [(ngModel)]="exam.date" class="form-control" type="date">
                       </div>
                       <button (click)="save()" class="btn btn-forward lonebtn">Speichern</button>
                 </div>
