--- a/franklyn-frontend/src/app/components/new-test/new-test.component.html
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="container-fluid" *ngIf="showFourthCard == true">
-                <div class="card">
+                <div class="card successful">
                     <div class="card-body">
                         <h5 class="card-title">Test wurde erfolgreich erstellt!</h5>
                         <br>
